--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk17
+FROM eclipse-temurin:17-jdk
 
 VOLUME /tmp
 
@@ -6,4 +6,5 @@ ARG JAR_FILE=build/libs/*.jar
 
 COPY ${JAR_FILE} app.jar
 
-ENTRYPOINT ["java",  "-jar", "-Dspring.profiles.active=dev", "-Duser.timezone=Asia/Seoul","/app.jar"]
+# 시간대 및 Spring 프로필 설정
+ENTRYPOINT ["java",  "-jar", "-Dspring.profiles.active=dev", "-Duser.timezone=Asia/Seoul", "/app.jar"]
